added duck-themed favicon

--- a/src/components/air/air.css
+++ b/src/components/air/air.css
@@ -1,15 +1,2 @@
-import React from "react";
-import "./air.css";
-
-const air = props => (
-  /* <div className="card">
-    <div className="img-container">
-      <img alt={props.name} src={props.image} />
-    </div>
-    <span onClick={() => props.removeCrow(props.id)} className="remove">
-    </span>
-  </div>
-); */
-
-
-export default CrowCard;
+plug in your fun designs here, Asha :)
+.background-image /*or just set background as the img*/
