added back in boilerplate for template js files; now renders; plugged in HTML colors for grass, water, sky

--- a/src/components/landingPage/landingPage.css
+++ b/src/components/landingPage/landingPage.css
@@ -1,3 +1,4 @@
-plug in your fun designs here, Asha :)
-.name-enter
-.start-game-btn
+/*.name-enter   # because we have to use JQuery?
+.start-game-btn  # because we have to use JQuery?
+.landing
+.gamePlayInstructions */
