--- a/src/components/water/water.css
+++ b/src/components/water/water.css
@@ -1,3 +1,28 @@
 plug in your fun designs here, Asha :)
-.water
-.duck /*not sure if this will ultimately go here*/
+/* template below */
+.footer {
+  background:
+  #219597;
+  height: 100px;
+  position: relative;
+  color: white;
+  overflow: auto;
+}
+/* below just from template
+.footer > .bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background:#5138A1;
+  padding: 8px;
+  font-weight: 600;
+}
+
+.footer > .bottom > img {
+  width: 20px;
+  position: relative;
+  top: 3px;
+  left: 2px;
+}
+*/
