--- a/src/components/air/air.css
+++ b/src/components/air/air.css
@@ -1,2 +1,12 @@
 plug in your fun designs here, Asha :)
 .background-image /*or just set background as the img*/
+/* checked your template and got the color codes; see below:
+sky = #3CBCFC
+light green = #80D010
+dark green = #005000
+water = #219597
+
+
+
+
+*/
