--- a/src/components/water/water.css
+++ b/src/components/water/water.css
@@ -1,9 +1,8 @@
 plug in your fun designs here, Asha :)
 /* template below */
 .footer {
-  background:
-  #219597;
-  height: 100px;
+  background-color: #219597;
+  height: 25%;
   position: relative;
   color: white;
   overflow: auto;
