all components now rendering in src index.js; code tidied in LandingPage.js

--- a/src/components/water/water.css
+++ b/src/components/water/water.css
@@ -1,10 +1,10 @@
 plug in your fun designs here, Asha :)
 /* template below */
 .footer {
-  background-color: #219597;
+  background: #219597;
   height: 25%;
-  position: relative;
-  color: white;
+  float: bottom;
+  position: absolute;
   overflow: auto;
 }
 /* below just from template
