changed routes, switched out LandingPage for App.js, etc.

--- a/src/components/water/water.css
+++ b/src/components/water/water.css
@@ -7,13 +7,13 @@ plug in your fun designs here, Asha :)
   position: absolute;
   overflow: auto;
 }
-/* below just from template
+/*
 .footer > .bottom {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  background:#5138A1;
+  background:
   padding: 8px;
   font-weight: 600;
 }
